--- a/GPT2_SentimentFineTuning.ipynb
+++ b/GPT2_SentimentFineTuning.ipynb
@@ -7762,7 +7762,7 @@
         "\n",
         "    return predicted_label, torch.softmax(logits, dim=-1).tolist()\n",
         "\n",
-        "sample_text = \"what the fuck\"\n",
+        "sample_text = \"what's going on\"\n",
         "predicted_label, probabilities = predict_sentiment(sample_text)\n",
         "\n",
         "print(f\"Input Text: {sample_text}\")\n",
@@ -7782,7 +7782,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input Text: what the fuck\n",
+            "Input Text: what's going on\n",
             "Predicted Label: 1\n",
             "Probabilities: [[0.018183259293437004, 0.9511358141899109, 0.030680881813168526]]\n"
           ]
